<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/home" />
    <item
        android:id="@+id/jobs"
        android:enabled="true"
        android:title="@string/myjobs"
        android:icon="@drawable/clipboard" />
    <item
        android:id="@+id/support"
        android:enabled="true"
        android:title="@string/support"
        android:icon="@drawable/support" />
    <item
        android:id="@+id/news"
        android:enabled="true"
        android:title="@string/news"
        android:icon="@drawable/news" />
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:title="@string/account"
        android:icon="@drawable/account" />

</menu>