<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="330dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_what_new_item"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"></ImageView>

            <TextView
                android:id="@+id/tv_what_new_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use_the_app"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintTop_toBottomOf="@id/iv_what_new_item"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp" />


            <TextView
                android:id="@+id/tv_what_new_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_what_new_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:text="@string/sdkjdsfhkfkjsdfsgsg"
                android:textSize="18sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_what_new_desc"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                android:background="#938989"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp">

            </View>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/learn_more"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="false">

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>