<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:layoutDirection="ltr">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/header"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/tv_hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_afternoon"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="20dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_location"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/button_shape">

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Tehran"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/marker"
                        android:layout_marginTop="6dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginStart="10dp">

                    </ImageView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="110dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="#FFFFFF"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tv_ffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Featured"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_marginLeft="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="55dp"
                    android:background="#938989"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_featured"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                </androidx.recyclerview.widget.RecyclerView>

                <ProgressBar
                    android:id="@+id/pb_featured"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorPrimary"
                    android:indeterminateTintMode="src_atop"
                    android:layout_marginTop="20dp" />

            </com.google.android.material.card.MaterialCardView>


            <ProgressBar
                android:id="@+id/pb_all_service"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintTop_toBottomOf="@id/card_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_all_service"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                app:layout_constraintTop_toBottomOf="@id/card_view"
                android:visibility="invisible">

            </androidx.recyclerview.widget.RecyclerView>


            <ImageView
                android:id="@+id/iv_collapse"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/open_layout"
                app:layout_constraintTop_toBottomOf="@id/rv_all_service"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/view"
                android:contentDescription="@string/collapseimage">

            </ImageView>


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#938989"
                app:layout_constraintTop_toBottomOf="@id/iv_collapse" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:paddingBottom="100dp">

                <TextView
                    android:id="@+id/tv_what_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_s_new"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/rv_what_new"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp">

                </TextView>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_what_new"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/tv_what_new">

                </androidx.recyclerview.widget.RecyclerView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottomsheet_menu_item"
        app:labelVisibilityMode="labeled"
        android:background="#FFFFFF">

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>








